# se-toolkit-hackathon

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  LICENSE  README.md  VERSION2_PLAN.md  docker-compose.yml  pyproject.toml
bot/: bot.py  config.py
bot/handlers/: __init__.py  delete_handler.py  help_handler.py  list_handler.py  remind.py  start.py
bot/services/: __init__.py  db.py  parser.py  scheduler.py
bot/tests/: test_parser.py
db/: init.sql
